<resources>
    <string name="app_name">The Virus Quiz</string>
    <string name="banner_id">ca-app-pub-1708932231209806/7522323375</string>
    <string name="Interstitial_Ad">ca-app-pub-1708932231209806/6209241704</string>
    <string name="the_covid_19">The Virus</string>
    <string name="quiz">QUIZ</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title">title</string>
    <string name="question">Question:-</string>
    <string name="question_ask">Question</string>
    <string name="answer">Answer:-</string>
    <string name="anwer_2">Anwer</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading...</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="out_of_10">OUT OF 10</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="challenge">Challenge</string>
    <string name="_0_0">0/0</string>
    <string name="next">Next</string>
</resources>
