<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="205dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="38sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/score" />




        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="38sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/out_of_10" />

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/share_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:layout_marginStart="50dp"
            android:layout_gravity="center_vertical"/>
    <Button
        android:id="@+id/done_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#989898"
        android:text="@string/done"
        android:layout_marginLeft="100dp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>
    </FrameLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>