<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_covid_19"
            android:textColor="@color/color"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            android:textColor="@color/color"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>
    </FrameLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_quiz"
        android:textStyle="bold"
        android:stateListAnimator="@null"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/bookmarks_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bookmarks_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/bookmarks"
        android:stateListAnimator="@null"

        android:textStyle="bold"
        android:backgroundTint="#8A8A8A"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>